[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false


[dependencies]
libp2p = { version = "0.53.2", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"]}
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
futures = "0.3.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

